# NFT-Raffle-Solana

./: Anchor.toml  package-lock.json
cli/: script.ts  types.ts
programs/nft-raffle/: Cargo.toml
programs/nft-raffle/src/: account.rs  constants.rs  error.rs  lib.rs  utils.rs
tests/: nft-raffle.ts
